# dictator

./: README.md  prompt.md  pyproject.toml  tech-spec.md
dictator/: cli.py  config.py  daemon.py  protocol.py  recorder.py  transcriber.py  vad.py
